--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
             href="https://fonts.googleapis.com/css?family=Anton&display=swap"
             rel="stylesheet"
         />
+        <link rel="stylesheet" href="../index.css" />
         <title>Minesweeper</title>
     </head>
     <body>
